CH: Fixing more z-index fighting

--- a/src/App.css
+++ b/src/App.css
@@ -66,9 +66,9 @@ a {
   margin-bottom: 50px;
 }
 
-/* .behind {
-  z-index: auto;
-} */
+.foreground {
+  z-index: 1;
+}
 
 .timer-title {
   color: var(--text-primary);
